@@ -48,7 +48,10 @@
       <buildTimestamp>06/17/2002 01:59 PM</buildTimestamp>
       <buildJavaVendor>Sun Microsystems Inc.</buildJavaVendor>
       <buildJavaVersion>1.3.1-beta</buildJavaVersion>
-      <time>Mon Jun 17 15:54:16 CEST 2002</time> <!-- server time -->
+
+      <serverTimestamp>2005-03-21 11:31:35.044</serverTimestamp>
+      <serverTimestampMillis>1111401087533</serverTimestampMillis>
+
       <gc/>   <!-- run garbage collector in xmlBlaster JVM -->
       <exit/> <!-- exit xmlBlaster server -->
 
@@ -502,6 +505,11 @@
          <tr>
             <td>client/joe/1/?dispatcherActive=true</td>
             <td>tells the DispatchManager of the specified session to become active</td>
+            <td><img src="ok.gif" border="0" alt="no" /></td>
+         </tr>
+         <tr>
+            <td>?serverTimestamp</td>
+            <td>The current time of the server, for example "2005-03-21 11:18:12.622"</td>
             <td><img src="ok.gif" border="0" alt="no" /></td>
          </tr>
       </table>
